@@ -1,5 +1,6 @@
 next
 ----
+-added refresh_chado_mart to the installer
 
 ergatis-v2r8b1
 --------------
